
	Bump to b46.
	* patches/icedtea-directaudio-close-trick.patch,
	* patches/icedtea-enum-bug-181.patch,
	* patches/icedtea-jsoundhs.patch,
	* patches/icedtea-sound.patch:
	Applied upstream.
	* HACKING,
	* Makefile.am: Updated.
	* patches/ecj/icedtea.patch: Recreated due to
	S6795030.
	* patches/icedtea-copy-plugs.patch: Recreated
	due to S6702956.

2009-02-08  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Updated sed to search for OpenJDK instead of IcedTea6. 
	* patches/icedtea-version.patch: Changed PRODUCT_NAME from IcedTea6 to
	OpenJDK.

2009-02-05  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Depend on overlay.stamp rather than patch.stamp.
	
2009-02-05  Andrew John Hughes  <ahughes@redhat.com>

	Ensure the NIO2 code is in sync with the latest
	build drop, b98.
	* overlays/nio2/openjdk/jdk/src/share/classes/org/classpath/icedtea/java/nio/file/attribute/NamedAttributeView.java,
	* overlays/nio2/openjdk/jdk/src/share/classes/sun/nio/fs/AbstractNamedAttributeView.java,
	* overlays/nio2/openjdk/jdk/src/share/classes/sun/nio/fs/Cancellable.java,
	* overlays/nio2/openjdk/jdk/src/windows/classes/sun/nio/fs/WindowsAclFileAttributeView.java,
	* overlays/nio2/openjdk/jdk/src/windows/classes/sun/nio/fs/WindowsChannelFactory.java,
	* overlays/nio2/openjdk/jdk/src/windows/classes/sun/nio/fs/WindowsDirectoryStream.java,
	* overlays/nio2/openjdk/jdk/src/windows/classes/sun/nio/fs/WindowsFileAttributeViews.java,
	* overlays/nio2/openjdk/jdk/src/windows/classes/sun/nio/fs/WindowsFileCopy.java,
	* overlays/nio2/openjdk/jdk/src/windows/classes/sun/nio/fs/WindowsFileStore.java,
	* overlays/nio2/openjdk/jdk/src/windows/classes/sun/nio/fs/WindowsFileSystemProvider.java,
	* overlays/nio2/openjdk/jdk/src/windows/classes/sun/nio/fs/WindowsLinkSupport.java,
	* overlays/nio2/openjdk/jdk/src/windows/classes/sun/nio/fs/WindowsNamedAttributeView.java,
	* overlays/nio2/openjdk/jdk/src/windows/classes/sun/nio/fs/WindowsPath.java,