@@ -927,6 +927,16 @@
 	* patches/icedtea-copy-plugs.patch: Recreated
 	due to S6702956.
 
+2009-02-10  Deepak Bhole <dbhole@redhat.com>
+	* plugin/icedtea/sun/applet/PluginAppletSecurityContext.java: Fix
+	exit permissions for applets.
+	* plugin/icedtea/sun/applet/PluginStreamHandler.java: Fix harmless, but
+	annoying OOB exception on browser exit.
+	* rt/net/sourceforge/jnlp/runtime/JNLPRuntime.java: Add function to
+	'always' disable exit.
+	* rt/net/sourceforge/jnlp/runtime/JNLPSecurityManager.java: Same, and
+	update support in checkPermission() for exit permissions.
+
 2009-02-08  Lillian Angel  <langel@redhat.com>
 
 	* Makefile.am: Updated sed to search for OpenJDK instead of IcedTea6. 
